@startuml DinoChrome
class Game {
  +startGame()
  +endGame()
  +updateScore()
}

class Dino {
  +jump()
  +duck()
}

class Obstacle {
  +move()
}

class Cactus {
  +grow()
}

class Bird {
  +fly()
}

class Score {
  +increase()
  +reset()
}

Game *-- "1" Dino : composition
Game o-- "1" Score : aggregation
Game *-- "1..*" Obstacle : composition

Obstacle <|-- Cactus : inheritance
Obstacle <|-- Bird : inheritance

@enduml
